algorithms/assignments/Connected_Components/error.txt
/tmp/ccVvvaFY.o: In function `main':
ConnCompTest.cpp:(.text+0x5f): undefined reference to `ConnCompContainer<int>::ConnCompContainer(int*, int)'
collect2: error: ld returned 1 exit status

/tmp/cc6eQcVN.o: In function `main':
ConnCompTest.cpp:(.text+0x5f): undefined reference to `ConnCompContainer<int>::ConnCompContainer(int*, int)'
collect2: error: ld returned 1 exit status

ConnCompTest.cpp: In function ‘int main(int, char**)’:
ConnCompTest.cpp:10:13: error: expected type-specifier before ‘ConnCompContainer’
         new ConnCompContainer(array, sizeof(array)/sizeof(array[0]));
             ^
/tmp/ccIsmdhS.o: In function `main':
ConnCompTest.cpp:(.text+0x5f): undefined reference to `ConnCompContainer<int>::ConnCompContainer(int*, int)'
collect2: error: ld returned 1 exit status
